--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "pinia": "^2.3.0",
+    "uuid": "^11.0.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
