--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^12.4.0",
     "pinia": "^2.3.0",
     "uuid": "^11.0.5",
     "vue": "^3.5.13",
